# booking-schedule-generator

./: .gitignore  README.md  __main__.py  block.py  booking-schedule.xlsx  date_row.py  main.py  pyproject.toml
examples/: example.py  prices.py
src/booking_schedule_generator/: __main__.py  block.py  main.py
src/booking_schedule_generator/data/: data.py
