[tool.poetry]
name = "booking-plan-generator"
version = "0.1.0"
description = "This package contains a tool for generating excel sheets for keeping track of bookings of your property."
authors = ["Paul Zoppoth"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
openpyxl = "^3.1.5"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
